- Fixed bug #55313 (Number of retries not set when params specified)   patch by: kevin at kevinlocke dot name